compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__try___assert_in_block.snap
---
source: compiler-core/src/javascript/tests/try_.rs
expression: "pub fn main(x) {\n  assert Ok(y) = {\n    try z = x\n    Ok(z + 1)\n  }\n  y\n}"
---
import { Ok, makeError } from "../gleam.mjs";

export function main(x) {
  let $ = (() => {
    if (!x.isOk()) return x;
    let z = x[0];

    return new Ok(z + 1);
  })();
  if (!$.isOk()) {
    throw makeError(
      "assignment_no_match",
      "my/mod",
      2,
      "main",
      "Assignment pattern did not match",
      { value: $ }
    )
  }
  let y = $[0];
  return y;
}

