compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__try___in_block.snap
---
source: compiler-core/src/javascript/tests/try_.rs
expression: "pub fn main(x) {\n  let y = {\n    try z = x\n    Ok(z + 1)\n  }\n  y\n}"

---
import { Ok } from "../gleam.mjs";

export function main(x) {
  let y = (() => {
    if (!x.isOk()) return x;
    let z = x[0];

    return new Ok(z + 1);
  })();
  return y;
}

