compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__try___rebinding.snap
---
source: compiler-core/src/javascript/tests/try_.rs
expression: "pub fn main(x) {\n  try x = x\n  try x = x\n  Ok(x)\n}"

---
import { Ok } from "../gleam.mjs";

export function main(x) {
  if (!x.isOk()) return x;
  let x$1 = x[0];

  if (!x$1.isOk()) return x$1;
  let x$2 = x$1[0];

  return new Ok(x$2);
}

