compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__try___top.snap
---
source: compiler-core/src/javascript/tests/try_.rs
assertion_line: 5
expression: "pub fn main(x) {\n  try y = x\n  try z = y\n  Ok(z)\n}"
---
import { Ok } from "../gleam.mjs";

export function main(x) {
  if (!x.isOk()) return x;
  let y = x[0];

  if (!y.isOk()) return y;
  let z = y[0];

  return new Ok(z);
}

